fix: width on narrow windows

--- a/styles/main.css
+++ b/styles/main.css
@@ -406,7 +406,7 @@ svg {
 
 @media only screen and (max-width: 650px){ 
     .card{ 
-        width: 57%;
+        width: 64%;
         margin-left: 30px;
     }
 }
@@ -414,21 +414,21 @@ svg {
 
 @media only screen and (max-width: 600px){ 
     .card{ 
-        width: 51%;
+        width: 58%;
     }
 }
 
 
 @media only screen and (max-width: 575px){ 
     .card{ 
-        width: 48%;
+        width: 51%;
     }
 }
 
 
 @media only screen and (max-width: 520px){ 
     .card{ 
-        width: 42%;
+        width: 49%;
         margin-left: 23px;
     }
 }
